--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:support-compat:28.0.0"
 
-    //zoom
-    implementation 'com.jsibbold:zoomage:1.2.0'
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     testImplementation 'junit:junit:4.12'
