--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ dependencies {
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.2'
-    //google
-    implementation 'com.google.maps.android:android-maps-utils:0.5+'
+    //BLE Library
+    implementation 'no.nordicsemi.android.support.v18:scanner:1.2.0'
 
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     testImplementation 'junit:junit:4.12'
