Add search room system

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
         <activity
             android:name=".Map.Maps2Activity"
             android:label="@string/title_activity_maps2"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            />
         <activity android:name=".BLEScanner.BLEscannerNewVersionActivity" />
         <activity android:name=".SearchSystemActivity"></activity>
     </application>
