--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -49,7 +48,7 @@
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -61,7 +60,8 @@
             android:screenOrientation="portrait"
             />
         <activity android:name=".BLEScanner.BLEscannerNewVersionActivity" />
-        <activity android:name=".SearchSystemActivity"></activity>
+        <activity android:name=".SearchSystemActivity"/>
+        <activity android:name=".TestPermission"/>
     </application>
 
 </manifest>
