--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
     //dexter
     implementation 'com.karumi:dexter:5.0.0'
+    //Search lib
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
+
 
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
