--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,19 @@
         <activity android:name=".BLEScanner.BLEscannerNewVersionActivity" />
         <activity android:name=".SearchSystemActivity" />
         <activity android:name=".TestPermission" />
+
+        <uses-library
+            android:name="com.google.android.wearable"
+            android:required="true" />
+        <!--
+               Set to true if your app is Standalone, that is, it does not require the handheld
+               app to run.
+        -->
+        <meta-data
+            android:name="com.google.android.wearable.standalone"
+            android:value="true" />
+
+        <activity android:name=".PlateActivity"></activity>
     </application>
 
 </manifest>
