--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,12 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:support-compat:28.0.0"
 
-    //BLE Library
-    implementation 'no.nordicsemi.android.support.v18:scanner:1.2.0'
-    //Serach
-    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
     //dexter
     implementation 'com.karumi:dexter:5.0.0'
     //Search lib
     implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
+    //scan qr
+    implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
 
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
