--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,12 @@ dependencies {
     implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
     //scan qr
     implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.3'
+    //firebase
+    implementation 'com.google.firebase:firebase-firestore:18.1.0'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
 
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -44,3 +48,4 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
