--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:name=".Map.Maps2Activity"
             android:label="@string/title_activity_maps2"
             android:screenOrientation="portrait" />
+        <activity android:name=".PlateActivity" />
     </application>
 
 </manifest>
