Add testPage and change get waiting Time data by dummy data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
             android:label="@string/title_activity_maps2"
             android:screenOrientation="portrait" />
         <activity android:name=".PlateActivity" />
+        <activity android:name=".TestPageActivity"></activity>
     </application>
 
 </manifest>
